# postgreth

./: .gitignore  Cargo.toml  README.md  flake.nix  postgreth.control
benches/: log_to_jsonb.rs
postgreth/: Cargo.toml
postgreth/benches/: log_to_jsonb.rs
postgreth/src/: lib.rs
src/: lib.rs
testdata/: log.json
