[package]
name = "postgreth"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
alloy-dyn-abi = { version = "0.6.4" }
alloy-json-abi = { version = "0.6.4", features = ["serde_json"] }
alloy-primitives = { version = "0.7.0", features = ["serde"] }
alloy-sol-types = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ethers = "2.0.13"
alloy-dyn-parser = "0.1.1"

[dev-dependencies]
pgrx-tests = "=0.11.3"
criterion = "0.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "log_to_jsonb"
harness = false
